ready write sixweather

--- a/miniprogram/pages/index/cpns/TodayTomorrow/index.less
+++ b/miniprogram/pages/index/cpns/TodayTomorrow/index.less
@@ -26,6 +26,15 @@
       .text {
         color: #949494
       }
+
+    }
+
+    .weather {
+      .icon {
+        color: #94949400;
+        background-size: auto 100%;
+        background-repeat: no-repeat;
+      }
     }
 
 
