advice-item start

--- a/miniprogram/pages/index/cpns/LifeAdvice/index.less
+++ b/miniprogram/pages/index/cpns/LifeAdvice/index.less
@@ -1,1 +1,14 @@
 /* pages/index/cpns/LifeAdvice/index.wxss */
+// h:594px
+.life-advice {
+  height: 27.37vh;
+  width: 100vw;
+  margin: 5px 0;
+  background-color: #fff;
+  color: #979797;
+
+  .swiper {
+    height: 100%;
+    width: 100%;
+  }
+}
