seacher code ready star

--- a/miniprogram/pages/index/cpns/CurrentInfo/index.less
+++ b/miniprogram/pages/index/cpns/CurrentInfo/index.less
@@ -8,11 +8,11 @@
   height: 45vh;
   background-size: 100% 100%;
   position: relative;
-  color: #fcfefd;
+  color: #fff;
 
   .address {
     position: absolute;
-    top: 15px;
+    top: 20px;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -31,13 +31,13 @@
       margin: 0px 5px;
       height: 18px;
       line-height: 18px;
-      font-size: 18px;
+      font-size: 17px;
     }
 
     .county {
       height: 18px;
       line-height: 18px;
-      font-size: 18px;
+      font-size: 17px;
     }
 
     .trig {
@@ -49,6 +49,16 @@
       border-right: 6px solid #fcfefd00;
       border-top: 6px solid #fcfefd;
     }
+  }
+
+  .updata-time {
+    position: absolute;
+    top: 43px;
+    left: 50%;
+    transform: translateX(-45%);
+    font-size: 13px;
+    opacity: 0;
+    transition: opacity 0.5s 5s;
   }
 
   .info {
@@ -64,7 +74,7 @@
 
     .temp {
       font-size: 50px;
-      margin-left: 25px;
+      margin-left: 20px;
     }
 
     .weather {
@@ -72,12 +82,18 @@
       margin-bottom: 5px;
     }
 
-    .windy {
-      font-size: 12px;
-    }
+    @size :15px;
 
-    .humidity {
-      font-size: 12px;
+    .other {
+      height: @size;
+      width: 100%;
+
+      .windy,
+      .humidity {
+        font-size: @size;
+        height: @size;
+        line-height: @size;
+      }
     }
   }
 
