--- a/miniprogram/pages/index/cpns/LifeAdvice/c-cpns/AdviceItem/index.less
+++ b/miniprogram/pages/index/cpns/LifeAdvice/c-cpns/AdviceItem/index.less
@@ -27,6 +27,11 @@
       background-position: center center;
       color: #0000;
     }
+
+    .info {
+      font-size: 15px;
+      color: #000;
+    }
   }
 
 }
