--- a/miniprogram/pages/index/cpns/SixWeather/index.wxml
+++ b/miniprogram/pages/index/cpns/SixWeather/index.wxml
@@ -31,7 +31,7 @@
     </view>
   </view>
 
-  <view class="line-chat-content">
+  <view class="line-chat-content" style="display: {{display}};">
     <ec-canvas force-use-old-canvas="true" class="mychart-dom-bar" id="mychart-dom-bar" canvas-id="mychart-bar" ec="{{ ec }}" />
   </view>
 </view>
