--- a/miniprogram/pages/SelectLocation/index.less
+++ b/miniprogram/pages/SelectLocation/index.less
@@ -18,7 +18,45 @@ button {
 
 .scrollarea {
   .container {
-    .seach {}
+
+    .search {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      padding: 10px 20px;
+      border-bottom: 2px solid #f2f2f2;
+      margin-bottom: 40px;
+
+      .searchBg {
+        background-color: #E8E8ED;
+        width: 85%;
+        border-radius: 15px;
+        height: 35px;
+        display: flex;
+        flex-direction: row;
+
+        image {
+          margin-left: 10px;
+          margin-top: 5px;
+        }
+
+        input {
+          height: 35px;
+          line-height: 35px;
+          font-size: 20px;
+          margin-left: 15px;
+        }
+      }
+
+      .button {
+        width: 15vw;
+        text-align: center;
+        font-size: 16px;
+      }
+
+
+    }
 
     .current-location,
     .histroy,
