debug font wrap

--- a/miniprogram/pages/index/cpns/LifeAdvice/c-cpns/AdviceItem/index.less
+++ b/miniprogram/pages/index/cpns/LifeAdvice/c-cpns/AdviceItem/index.less
@@ -29,8 +29,12 @@
     }
 
     .info {
-      font-size: 15px;
+      font-size: 12px;
       color: #000;
+    }
+
+    .name {
+      font-size: 10px;
     }
   }
 
